--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "express",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +18,8 @@
     "mongoose": "^8.7.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "eslint": "^9.12.0",
     "nodemon": "^3.1.7"
   }
 }
