--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "express",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "fomart": "prettier --write ."
   },
   "keywords": [],
   "author": "",
